# mcp-client-for-ollama

./: .gitignore  CHANGELOG_v0.27.0.md  CHANGELOG_v0.28.1.md  CHANGELOG_v0.28.4.md  CHANGELOG_v0.28.5.md  CHANGELOG_v0.28.6.md  CHANGELOG_v0.44.0.md  COLLAPSIBLE_OUTPUT_AND_TRACE_LOGGING.md  DELEGATION_TRACE_MENU_IMPLEMENTATION.md  FIXES_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  MODEL_UPDATE_SUMMARY.md  PythonCodeExecutionTool.md  QUICK_START_v0.44.0.md  README.md  RELEASE_NOTES_0.23.0.md  RELEASE_NOTES_v0.29.0.md  SUMMARY_v0.28.5.md  SYSTEM_PROMPT_TOOLS_FIX.md  TESTING.md  TESTING_ACCENT_WRITER.md  UI_COMPLETE.md  VERSION_0.23.0_SUMMARY.md  VERSION_0.44.0_SUMMARY.md  WEB_MCP_SERVERS_FIX.md  add_agent_emojis.py  add_partial_file_reading.py  config-remote-finetune.json  config.claude.example.json  config.remote-finetune.example.json  create_specialized_executors.py  fix_planner_batch_delete_v4.py  fix_planner_data_in_description.py  fix_planner_delete_files_v3.py  fix_planner_file_path_propagation_v2.py  fix_planner_stay_on_task_v5.py  implement_python_batch_operations.py  implement_solution_a_c.py  new_features.md  partition_executor_analysis.md  (+16 more)
.config/: CLAUDE.md
.obsidian/: workspace.json
.trace_test/: trace_20251214_163829.json  trace_20251214_164156.json
cli-package/: pyproject.toml
config/: model_intelligence.yaml.example
data/: agent_training_examples.jsonl  extracted_patterns.json  fine_tuning_results.json  improvement_cycles.json  improvement_report_20260131_152422.json  improvement_report_20260131_161243.json  training_data_20260131_161243.jsonl
docs/: 0.45.31_fixes_summary.md  0.45.33_batch_processing_fix.md  0.45.34_batch_processing_fixes.md  0.45.35_final_batch_fixes.md  0.45.36_placeholder_path_fix.md  0.45.37_0.45.38_claude_phase1_phase2_summary.md  0.45.37_claude_integration_phase1.md  0.45.38_phase2_development.md  ALL_BATCH_ISSUES_FIXED.md  ARTIFACT_SYSTEM_FIXES.md  ARTIFACT_UI_IMPLEMENTATION.md  AUTOCOMPLETE_FIX.md  BATCH_PROCESSING_FIXES_SUMMARY.md  BUG_PLANNER_DOESNT_KNOW_MCP_TOOLS.md  CHANGELOG.md  CHANGELOG_v0.23.20.md  CHANGELOG_v0.28.0.md  CHANGELOG_v0.28.2.md  CHANGELOG_v0.28.3.md  CHANGELOG_v0.42.1.md  CHAT_TO_AGENT_IMPLEMENTATION.md  COLLAPSIBLE_OUTPUT_AND_TRACE_LOGGING.md  CONFIG_MERGE_FIX.md  CRITICAL_CLAUDE_API_KEY_REQUIRED.md  Chat_To_Agent_Knowledge_Transfer.md  Chat_To_Agent_user_observations.md  DELEGATION_TRACE_CLI_FLAGS.md  DELEGATION_TRACE_COMPLETE_SUMMARY.md  DELEGATION_TRACE_MENU.md  DESIGN_ghost_writer_agents.md  DIFF_TOOL_DESIGN.md  FINETUNING_IMPLEMENTATION_FIX.md  Fine_tuning_guidance.md  GPU_memory_issues.md  IMPLEMENTATION_COMPLETE.md  JSONL_VIEWER_GUIDE.md  MCP_TOOL_AWARENESS_IMPLEMENTATION.md  NON_INTERACTIVE_MODE.md  PYTHON_3.13_FIX.md  QA_FIXES_v0.42.2.md  (+80 more)
mcp_client_for_ollama/: __init__.py  client.py
misc/: BUG_FIX_DELEGATION_TRACE.md  BUG_PLANNER_DOESNT_KNOW_MCP_TOOLS.md  COMPLETION_STATUS.md  DELEGATION_TRACE_CLI_FLAGS.md  DELEGATION_TRACE_COMPLETE_SUMMARY.md  DELEGATION_TRACE_MENU.md  DELEGATION_TRACE_MENU_IMPLEMENTATION.md  HOW_TO_USE_TRACE_LOGGING.md  INSTALLATION_FIX.md  MCP_TOOL_AWARENESS_IMPLEMENTATION.md  MULTI_MODAL_SUPPORT.md  NON_INTERACTIVE_MODE.md  TRACE_LOGGING_QUICK_REFERENCE.md  agent-delegation-design.md  agent-delegation-user-guide.md  auto_load_configuration.md  builtin_tools_bug_fix.md  config.example.json  delegation-bugfix-report.md  planner-improvements-implemented.md  planner-prompt-improvement.md  session_builtin_tools_migration.md  version-0.23.0-changes.md
tests/: test_agent_config.py  (+16 more)
(+119 files in other folders)
